# Snowflake-ChatGPT

./: main.py  pyproject.toml  requirements.txt
chat_gpt/: chat_gpt_controller.py  chat_gpt_model.py  chat_gpt_service.py
