[tool.poetry]
name = "chatgpt-rest-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chatgpt_rest_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
openai = "^0.27.7"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
